Adjusted `z-index` for `Table` header to ensure proper stacking context; bumped version to 1.9.2

--- a/src/components/Table/components/HeadCell/HeadCell.module.scss
+++ b/src/components/Table/components/HeadCell/HeadCell.module.scss
@@ -5,6 +5,7 @@
   background-color: var(--color-bg-secondary);
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .content {
